--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Sinan's Random Findings"
 author: "Sinan Ussakli"
-description: "Sinan's Tech Blurbs"
+description: "Sinan's tech blurbs about anything"
 
 email: "compumaster@eksiduyuru.com"
 #twitter_username: "twitteruser"
